--- a/untitled.html
+++ b/untitled.html
@@ -1,1 +1,1 @@
-<div class="placeholder-text">Double-click this text to start writing.</div>
+<div>And you can start <i>writing</i>. This is a <b>rich text</b> edutor.&nbsp;<br></div>
