--- a/div_Using_default_text_is__.html
+++ b/div_Using_default_text_is__.html
@@ -1,1 +1,26 @@
-<div>Using default text is a simple way to create the appearance of content without having to create it. I hope you enjoyed the fake text. After Hours Programming created this application. After Hours Programming created this application. Your design looks awesome by the way. It looks even better with you using this text. Default text is for web developers and designers that need default text quickly. Default text creates the illusion of real text. I hope you enjoyed the fake text. This string is randomly  generated.<br></div>
+<div>Using default text is a simple way to create the appearance of content without having to create it. I hope you enjoyed the fake text. After Hours Programming created this application <cite class="squire-citation ltx_cite" data-bib-text="@article{Dong_2015,
+	doi = {10.1371/journal.pone.0120039},
+	url = {http://dx.doi.org/10.1371/journal.pone.0120039},
+	year = 2015,
+	month = {mar},
+	publisher = {Public Library of Science ({PLoS})},
+	volume = {10},
+	number = {3},
+	pages = {e0120039},
+	author = {Xianlei Dong and Johan Bollen},
+	editor = {Tobias Preis},
+	title = {Computational Models of Consumer Confidence from Large-Scale Online Attention Data: Crowd-Sourcing Econometrics},
+	journal = {{PLOS} {ONE}}
+}" data-bib-key="Dong_2015" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#Dong_2015">Dong 2015</a></cite> <cite class="squire-citation ltx_cite" data-bib-text="@article{Bollen_2006,
+	doi = {10.1007/s11192-006-0176-z},
+	url = {http://dx.doi.org/10.1007/s11192-006-0176-z},
+	year = 2006,
+	month = {dec},
+	publisher = {Springer Science $\mathplus$ Business Media},
+	volume = {69},
+	number = {3},
+	pages = {669--687},
+	author = {Johan Bollen and Marko A. Rodriquez and Herbert Van de Sompel},
+	title = {Journal status},
+	journal = {Scientometrics}
+}" data-bib-key="Bollen_2006" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#Bollen_2006">Bollen 2006</a></cite>. After Hours Programming created this application. Your design looks awesome by the way. It looks even better with you using this text. Default text is for web developers and designers that need default text quickly. Default text creates the illusion of real text. I hope you enjoyed the fake text. This string is randomly  generated.<br></div>
