--- a/div_If_it_is_not__.html
+++ b/div_If_it_is_not__.html
@@ -1,1 +1,14 @@
-<div>If it is not real text, they will focus on the design. This text will not appear in a consistent order. A designer can use default text to simulate what text would look like. However, standard default text can do the trick. A designer can use default text to simulate what text would look like. After Hours Programming created this application. I hope you enjoyed the fake text. Your design looks awesome by the way. This text will not appear in a consistent order. That is preciously how this string was constructed.<br></div>
+<div>If it is not real text, they will focus on the design. This text will not appear in a consistent order. A designer can use default text to simulate what text would look like <cite class="squire-citation ltx_cite" data-bib-text="@article{Pampel_2007,
+	doi = {10.1177/0044118x07308070},
+	url = {http://dx.doi.org/10.1177/0044118x07308070},
+	year = 2007,
+	month = {aug},
+	publisher = {{SAGE} Publications},
+	volume = {39},
+	number = {4},
+	pages = {453--479},
+	author = {F. C. Pampel and J. Aguilar},
+	title = {Changes in Youth Smoking,
+1976-2002: A Time-Series Analysis},
+	journal = {Youth {\&amp;} Society}
+}" data-bib-key="Pampel_2007" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#Pampel_2007">Pampel 2007</a></cite>. However, standard default text can do the trick. A designer can use default text to simulate what text would look like. After Hours Programming created this application. I hope you enjoyed the fake text. Your design looks awesome by the way. This text will not appear in a consistent order. That is preciously how this string was constructed.<br></div>
