--- a/untitled.html
+++ b/untitled.html
@@ -1,1 +1,1 @@
-<div>And you can start <i>writing</i>. This is a <b>rich text</b> edutor.&nbsp;<br></div>
+<div>And you can start <i>writing</i>. This <span class="ltx_Math" contenteditable="false" data-equation="e=mc^2+\frac{xy}{\sqrt{xy}}">\(e=mc^2+\frac{xy}{\sqrt{xy}}\)</span>&nbsp;is a <b>rich text</b> edutor.&nbsp;<br></div>
